--- a/application.properties
+++ b/application.properties
@@ -1,7 +1,7 @@
 #Grails Metadata file
-#Tue Jan 10 23:47:53 CET 2012
-app.grails.version=2.0.0
+#Tue Sep 17 00:06:25 BRT 2013
+app.grails.version=2.1.1
 app.name=springMobile
-plugins.hibernate=2.0.0
+plugins.hibernate=2.1.1
 plugins.maven-publisher=0.7.5
-plugins.tomcat=2.0.0
+plugins.tomcat=2.1.1
