--- a/application.properties
+++ b/application.properties
@@ -1,7 +1,7 @@
 #Grails Metadata file
-#Tue Sep 17 00:06:25 BRT 2013
+#Tue Sep 17 22:52:39 BRT 2013
 app.grails.version=2.1.1
 app.name=springMobile
 plugins.hibernate=2.1.1
-plugins.maven-publisher=0.7.5
+plugins.release=2.2.1
 plugins.tomcat=2.1.1
