--- a/plugin.xml
+++ b/plugin.xml
@@ -1,6 +1,6 @@
 <plugin name='spring-mobile' version='0.4.1' grailsVersion='1.3.6 &gt; *'>
   <author>Sebastien Blanc</author>
-  <authorEmail>sblanc@e-id.nl</authorEmail>
+  <authorEmail>scm.blanc@gmail.com</authorEmail>
   <title>Spring Mobile Grails plugin</title>
   <description>\
 Device resolver based on the Spring Mobile Library
@@ -9,10 +9,8 @@ Device resolver based on the Spring Mobile Library
   <type>SpringMobileGrailsPlugin</type>
   <resources />
   <repositories>
-    <repository name='grailsCentral' url='http://plugins.grails.org' />
-    <repository name='http://repo.grails.org/grails/plugins' url='http://repo.grails.org/grails/plugins/' />
+    <repository name='grailsCentral' url='http://grails.org/plugins' />
     <repository name='http://repo.grails.org/grails/core' url='http://repo.grails.org/grails/core/' />
-    <repository name='grailsCore' url='http://svn.codehaus.org/grails/trunk/grails-plugins' />
     <repository name='mavenCentral' url='http://repo1.maven.org/maven2/' />
     <repository name='http://snapshots.repository.codehaus.org' url='http://snapshots.repository.codehaus.org/' />
     <repository name='http://maven.springframework.org/milestone/' url='http://maven.springframework.org/milestone/' />
@@ -25,7 +23,17 @@ Device resolver based on the Spring Mobile Library
       <dependency group='net.sourceforge.wurfl' name='wurfl' version='1.2' />
     </runtime>
   </dependencies>
-  <plugins />
+  <plugins>
+    <compile>
+      <plugin group='org.grails.plugins' name='cache' version='1.0.0' />
+    </compile>
+    <runtime>
+      <plugin group='org.grails.plugins' name='hibernate' version='2.1.1' />
+    </runtime>
+    <build>
+      <plugin group='org.grails.plugins' name='tomcat' version='2.1.1' />
+    </build>
+  </plugins>
   <runtimePluginRequirements />
   <behavior />
 </plugin>
