--- a/plugin.xml
+++ b/plugin.xml
@@ -1,13 +1,15 @@
-<plugin name='spring-mobile' version='0.4.1' grailsVersion='1.3.6 &gt; *'>
+<plugin name='spring-mobile' version='0.4.2' grailsVersion='1.3.6 &gt; *'>
   <author>Sebastien Blanc</author>
   <authorEmail>scm.blanc@gmail.com</authorEmail>
   <title>Spring Mobile Grails plugin</title>
-  <description>\
+  <description>
 Device resolver based on the Spring Mobile Library
 </description>
   <documentation>http://grails.org/plugin/spring-mobile</documentation>
   <type>SpringMobileGrailsPlugin</type>
-  <resources />
+  <resources>
+    <resource>org.grails.plugins.springmobile.SpringMobileTagLib</resource>
+  </resources>
   <repositories>
     <repository name='grailsCentral' url='http://grails.org/plugins' />
     <repository name='http://repo.grails.org/grails/core' url='http://repo.grails.org/grails/core/' />
