--- a/plugin.xml
+++ b/plugin.xml
@@ -1,4 +1,4 @@
-<plugin name='spring-mobile' version='0.4.2' grailsVersion='1.3.6 &gt; *'>
+<plugin name='spring-mobile' version='0.4.3' grailsVersion='1.3.6 &gt; *'>
   <author>Sebastien Blanc</author>
   <authorEmail>scm.blanc@gmail.com</authorEmail>
   <title>Spring Mobile Grails plugin</title>
@@ -19,11 +19,8 @@ Device resolver based on the Spring Mobile Library
   </repositories>
   <dependencies>
     <compile>
-      <dependency group='org.springframework.mobile' name='spring-mobile-device' version='1.0.0.M3' />
+      <dependency group='org.springframework.mobile' name='spring-mobile-device' version='1.0.2.RELEASE' />
     </compile>
-    <runtime>
-      <dependency group='net.sourceforge.wurfl' name='wurfl' version='1.2' />
-    </runtime>
   </dependencies>
   <plugins>
     <compile>
