--- a/plugin.xml
+++ b/plugin.xml
@@ -1,4 +1,4 @@
-<plugin name='spring-mobile' version='0.4.4' grailsVersion='1.3.6 &gt; *'>
+<plugin name='spring-mobile' version='0.4.5' grailsVersion='1.3.6 &gt; *'>
   <author>Sebastien Blanc</author>
   <authorEmail>scm.blanc@gmail.com</authorEmail>
   <title>Spring Mobile Grails plugin</title>
@@ -8,6 +8,7 @@ Device resolver based on the Spring Mobile Library
   <documentation>http://grails.org/plugin/spring-mobile</documentation>
   <type>SpringMobileGrailsPlugin</type>
   <resources>
+    <resource>org.grails.plugins.springmobile.GrailsAdaptTagLib</resource>
     <resource>org.grails.plugins.springmobile.SpringMobileTagLib</resource>
   </resources>
   <repositories>
